@@ -797,6 +797,7 @@ about.text=jEdit is brought to you by:\n\
 	Thomas Bock\n\
 	Todd Papaioannou\n\
 	Tom Locke\n\
+	Vicente Salvador\n\
 	Vinod Kiran\n\
 	Will Sargent\n\
 	Wojciech Stryjewski\n\
